--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     
     body{
     box-sizing: border-box;
-    background-image: url(barbar.png);
+    background-image: url(barbar01.png);
     background-size: cover;
     font-family: 'Zen Loop', cursive;
     }
